Update and rename appsettings.Example.json to appsettings.json

--- a/src/TokenPay/appsettings.json
+++ b/src/TokenPay/appsettings.json
@@ -12,7 +12,7 @@
   "ConnectionStrings": {
     "DB": "Data Source=TokenPay.db;"
   },
-  "TRON-PRO-API-KEY": "xxxxxx-xxxx-xxxx-xxxxxxxxxxxx", // 避免接口请求频繁被限制，此处申请 https://www.trongrid.io/dashboard/keys
+  "TRON-PRO-API-KEY": "aaf322b1-3aa8-45f5-b348-689ae9127eda", // 避免接口请求频繁被限制，此处申请 https://www.trongrid.io/dashboard/keys
   "BaseCurrency": "CNY", //默认货币，支持 CNY、USD、EUR、GBP、AUD、HKD、TWD、SGD
   "Rate": { //汇率 设置0将使用自动汇率
     "USDT": 0,
@@ -23,13 +23,13 @@
   "ExpireTime": 1800, //单位秒
   "UseDynamicAddress": false, //是否使用动态地址，设为false时，与EPUSDT表现类似；设为true时，为每个下单用户分配单独的收款地址
   "Address": { // UseDynamicAddress设为false时在此配置TRON收款地址，EVM可以替代所有ETH系列的收款地址，支持单独配置某条链的收款地址
-    "TRON": [ "TKGTx4pCKiKQbk8evXHTborfZn754TGViP" ],
-    "EVM": [ "0x9966aA2f1dDD7c1174553e687791a96c1Bc20680" ]
+    "TRON": [ "TVMSgUZ1MqAfLbPBTJLyNEQuCp1Jka4bx4" ],
+    "EVM": [ "0xc5a5640ce9713896e5fa23f72cef7e32678fbc10" ]
   },
   "OnlyConfirmed": false, //默认仅查询已确认的数据，如果想要回调更快，可以设置为false
   "NotifyTimeOut": 3, //异步通知超时时间
-  "ApiToken": "666666", //异步通知密钥，请务必修改此密钥为随机字符串，脸滚键盘即可
-  "WebSiteUrl": "http://token-pay.xxxxx.com", //配置服务器外网域名
+  "ApiToken": "1688", //异步通知密钥，请务必修改此密钥为随机字符串，脸滚键盘即可
+  "WebSiteUrl": "https://mypay.fly.dev", //配置服务器外网域名
   "Collection": { //需要 UseDynamicAddress 为 true 才有使用归集功能的意义，静态地址收款TokenPay无法归集
     "Enable": false, //是否启用归集功能，false 表示关闭，true 表示启用
     "UseEnergy": true, //是否租用能量归集，降低归集成本，false 表示直接燃烧trx转账
@@ -39,11 +39,11 @@
     "MinUSDT": 0.1, //只归集USDT余额大于此金额的地址
     "NeedEnergy": 65000, //归集USDT所需能量，此配置项通常不需要修改，发生变化时会在GitHub更新
     "EnergyPrice": 210, //波场当前能量单价，此配置项通常不需要修改，发生变化时会在GitHub更新
-    "Address": "TKGTx4pCKiKQbk8evXHTborfZn754TGViP" //归集收款地址，配置你自己的收款地址
+    "Address": "TVMSgUZ1MqAfLbPBTJLyNEQuCp1Jka4bx4" //归集收款地址，配置你自己的收款地址
   },
   "Telegram": {
-    "AdminUserId": 12345678, // 你的TG账号ID，如不知道ID，可给 https://t.me/QueryCoinBot 发送 /tgid 获取ID
-    "BotToken": "1234567890:AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" //从https://t.me/BotFather 创建机器人时，会给你BotToken
+    "AdminUserId": 5579126130, // 你的TG账号ID，如不知道ID，可给 https://t.me/QueryCoinBot 发送 /tgid 获取ID
+    "BotToken": "7158563614:AAG7TjAMuh-IU5Gzwd0k4mJ7UYQOaHNCXr8" //从https://t.me/BotFather 创建机器人时，会给你BotToken
   },
   "RateMove": { //汇率微调，支持设置正负数，仅支持两位小数
     "TRX_CNY": 0,
